# open-banking-subscription-manager

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 072ef9ff98fb_initial_schema.py  42254848b638_add_rescan_jobs.py  8c9a80fd713d_add_consent_records.py  be086e3a25d3_raw_payload_to_jsonb.py  ed864f0e05fe_add_token_version_to_users.py
backend/src/subtrack/: __init__.py  config.py  main.py
backend/src/subtrack/api/: deps.py
backend/src/subtrack/api/routes/: accounts.py  auth.py  consent.py  link.py  subscriptions.py  transactions.py  webhooks.py
backend/src/subtrack/db/: base.py  models.py
backend/src/subtrack/detection/: ai.py  engine.py
backend/src/subtrack/ingestion/: scheduler.py  sync.py
backend/src/subtrack/providers/: base.py  factory.py
backend/src/subtrack/providers/plaid/: provider.py  webhook.py
backend/src/subtrack/security/: auth.py  crypto.py
backend/tests/: conftest.py  test_account_deletion.py  test_auth.py  test_consent.py  test_crypto.py  test_detection_engine.py  test_detection_normalize.py  test_health.py  test_ingestion_sync.py  test_routes_accounts_transactions.py  test_routes_reconnect.py  test_routes_rescan.py  test_scheduler_poll.py
docs/: BACKLOG.md
docs/specs/: architecture.md  ui.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
(+10 files in other folders)
