[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtrack"
version = "0.0.1"
description = "SubTrack — open banking subscription manager (backend)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg2-binary>=2.9",
    "plaid-python>=18.0",
    "anthropic>=0.39",
    "cryptography>=42",
    "python-jose[cryptography]>=3.3",
    # bcrypt used directly: passlib is unmaintained and warns on bcrypt>=4.1
    "bcrypt>=4",
    # google-auth's requests transport (used to fetch/cache Google's public
    # keys for ID token verification) doesn't pull in requests itself.
    "google-auth>=2.30",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.mypy]
python_version = "3.9"
packages = ["subtrack"]
mypy_path = "src"
ignore_missing_imports = true
